# mancer

./: .gitignore  .gitignore_prototypes  .pre-commit-config.yaml  LINT_SETUP.md  RAPORT_PIPELINE.md  README.md  README_PROTOTYPES.md  TODO  TODO_PIPELINE.md  conftest.py  fix_command_types.py  mkdocs.yml  pyproject.toml  pytest.ini  pytest.ini.backup  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_failure.md
.github/workflows/: ci.yml  nightly-e2e.yml  publish.yml  release-validation.yml  release.yml
dev_tools/: README.md  mancer_tools.sh  run_dev.py  run_tests.py  run_tests.sh  setup_dev.sh  uninstall_dev.py  update_versions.py  visualize_ddd.py
development/: README.md
development/docker_test/: Dockerfile  README.md  TESTING_GUIDE.md  cleanup.sh  docker-compose.yml  env.example  manage_presets.sh  presets.json  setup.sh  start_test.sh
development/docker_test/machine-template/: Dockerfile  entrypoint.sh  setup-container.sh
development/scripts/: check_mancer_version.py  make_requirements.py  run_prototype.py
docs/: LOCAL_PIPELINE_GUIDE.md  TESTING_AUTOMATION_FLOW.md  TESTING_THEORY.md  api.md  concepts.md  contact.md  development.md  examples.md  faq.md  getting-started.md  index.md  user-guide.md  versioning.md
docs/api/: application.md  domain.md  infrastructure.md
docs/architecture/: command-flow.md  ddd-overview.md  modules.md  overview.md
docs/css/: branding.css
docs/development/: RELEASE.md  contributing.md  feature-lifecycle.md  prototype-branching-strategy.md  prototype-strategy.md  testing-overview.md  version-adaptation.md
docs/diagrams/: legend.dot  mancer_ddd.dot
docs/examples/: all-examples.md
docs/extending/: backends.md  custom-commands.md  plugins.md
docs/getting-started/: installation.md  quickstart.md
docs/testing/: README.md  lxc-setup.md  maintenance.md  plan.md
docs/testing/runbooks/: ci-cd-troubleshooting.md  local-development.md
docs/tools/: visualize_ddd.py
docs/user-guide/: commands.md  configuration.md  data-formatting.md  examples.md  logging-and-errors.md  versioning-compatibility.md
examples/: apt_example.py  basic_usage.py  cache_usage.py  cache_visualization.py  command_chains.py  command_logging_example.py  create_custom_command.py  data_formats_usage.py  df_command_example.py  docker_testing_example.py  execution_history_analysis.py  new_logger_example.py  remote_sudo_usage.py  remote_usage.py  ssh_auth_methods.py  version_checking.py  version_info_example.py
pipeline/config/: pipeline.yaml
prototypes/: NetPinger.py  __init__.py  network.py
prototypes/NOM/: main.py
prototypes/configMaster/: clean.sh  cli.py  config.py  file_operations.py  main.py  requirements.txt  run.sh
prototypes/mancer-systemd-prototype/: README.md  __init__.py  config.yaml  main.py  requirements.txt
prototypes/mancer-terminal/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_gui.py
prototypes/mancer-terminal/cli/: __init__.py  main.py
prototypes/mancer-terminal/config/: terminal.yaml
prototypes/mancer-terminal/gui/: __init__.py  connection_dialog.py  file_transfer_widget.py  main_window.py  master_key_dialog.py  password_dialog.py  profile_manager_widget.py  session_manager_widget.py  ssh_fingerprint_dialog.py  terminal_widget.py
prototypes/mancer-terminal/tools/: README.md  __init__.py  run_terminal.py  run_terminal.sh  test_setup.sh
prototypes/mancer-terminal/utils/: __init__.py  ssh_command_parser.py
prototypes/mancerops-framework/: README.md  __init__.py  requirements.txt
prototypes/mancerops-framework/core/: __init__.py  observability.py
prototypes/nginx-monitor/: main.py
prototypes/searchDir/: main.py
prototypes/sysdch/: main.py
prototypes/systemctl/: main.py  main_with_mancer.py
prototypes/template/: README.md  main.py  pyproject.toml  requirements.txt
prototypes/test-final/: README.md  pyproject.toml
prototypes/test-strategy/: README.md  pyproject.toml
scripts/: local_pipeline.sh  pipeline_stage.sh  quick_pipeline.sh  release_helper.sh  run_tests.sh  test_runner.sh  tests.sh  unit_tests_dual.sh  unittest.sh  unittest_docker.sh
scripts/pipeline/: auto.sh  local.sh  quick.sh  stage.sh
src/domain/interface/: backend_interface.py  command_interface.py
src/domain/model/: command_context.py
src/infrastructure/command/: base_command.py
src/infrastructure/factory/: command_factory.py
src/mancer/: __init__.py  core.py  shell.py
src/mancer/application/: __init__.py  command_cache.py  shell_runner.py
src/mancer/config/: settings.yaml  tool_versions.yaml
src/mancer/core/: exceptions.py
src/mancer/domain/: __init__.py
src/mancer/shell/: __init__.py  base.py  bash_commands.py  commands.py  shell.py  shortcuts.py  terminal.py
src/mancer/tools/: NetPinger.py
tests/: conftest.py
tests/docker/: cleanup.sh  docker-compose.yml  run_automated_tests.sh
tests/docker/machine-template/: Dockerfile
tests/e2e/: README.md  __init__.py  conftest.py
tests/e2e/lxc/: fixtures.py  monitoring.py  network_config.sh  (+1 more)
tests/integration/: README.md  __init__.py  conftest.py  test_bash_commands.py  test_shell_integration.py  test_systemd_integration.py  test_utils.py
tests/unit/: __init__.py  conftest.py  test_base_command_comprehensive.py  test_bash_backend_comprehensive.py  test_cat.py  test_cd.py  test_chain.py  test_command_cache_comprehensive.py  test_commands.py  test_custom.py  test_data_selection.py  test_df.py  test_echo.py  test_find.py  test_grep.py  test_head.py  test_hostname.py  test_ls.py  test_netstat.py  test_ps.py  test_shell.py  test_simple.py  test_systemctl.py  test_systemd.py  test_tail.py  test_wc.py
tools/: README.md  __init__.py  build_package.py  check_mancer_version.py  install.sh  install_dev.py  install_prototype_deps.py  make_requirements.py  mancer_tools.sh  prototype_branch_manager.sh  prototype_manager.py  quick_prototype.sh  run_prototype.py  test_prototype_strategy.py
tools/configMaster/: main.py
tools/searchDir/: main.py
(+173 files in other folders)
