[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "integration: Integration tests",
    "privileged: Tests requiring root privileges"
]

# PEP 621 – metadane projektu
[project]
name = "mancer"
version = "0.7.1"
description = "Programmable automation engine - execute commands on any platform (Linux/Windows/macOS) locally or remotely through one Python interface"
requires-python = ">=3.9"
authors = [
  { name = "Kacper Paczos", email = "kacperpaczos2024@proton.me" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["automation", "remote-execution", "ssh", "command-orchestration", "pipeline", "structured-data", "cross-platform", "devops", "system-commands", "pandas", "json-export", "programmable"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Zależności czasu wykonania (zgrane z requirements.txt)
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.22.0",
  "python-dateutil>=2.8.2",
  "jsonschema>=4.17.0",
  "pyyaml>=6.0",
  "icecream>=2.1.3",
  "cryptography>=40.0.0",
  "configparser>=5.3.0",
  "flask>=2.0.0",
  "pydantic>=2.0.0",
  "polars>=0.20.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
dev = [
  "ruff>=0.4.0",
  "black>=24.3.0",
  "isort>=5.13.0",
  "mypy>=1.6.0",
  "pre-commit>=3.6.0",
  "types-PyYAML>=6.0.0",
  "types-requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mancer*"]


[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
  "E", "F", "I", # pycodestyle/pyflakes/isort
  "RET",  # flake8-return - detect missing returns
]
ignore = [
  "E722",  # Do not use bare except - ignoruję dla workflow CI
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Black – formatowanie
[tool.black]
line-length = 120
target-version = ["py39"]
skip-string-normalization = false

# isort – zgodny z black
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["mancer"]
src_paths = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["mancer"]

# mypy – statyczne typowanie (lekko restrykcyjne, bez łamania istniejącego kodu)
[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
warn_no_return = true
warn_unused_configs = true  # Warn about unused [mypy-<pattern>] config sections
warn_incomplete_stub = true  # Warn about incomplete type stubs
strict_optional = true
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true  # Disallow functions with incomplete type annotations
disallow_untyped_decorators = true  # Disallow decorators without type annotations
exclude = [
  "^prototypes/",
  "^development/",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.legacy.unit.test_command_cache_comprehensive"
disable_error_code = ["unreachable", "unused-ignore"]

[[tool.mypy.overrides]]
module = "mancer.domain.service.ssh_session_service"
disable_error_code = ["unreachable"]